# Tetris

./: Tetris.hs
src/haskell/: Main.hs  Tetris.hs  TetrisGrafico.hs  tetris.cabal
src/haskell/src/: Main.hs  Tetris.hs  TetrisGrafico.hs
