name:                tetris
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Haukur Rosinkranz & Christophe Vilain
maintainer:          hauxir@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable htetris
  main-is:             Main.hs
  other-modules:       Tetris, TetrisGrafico
  build-depends:       base, ncurses, random, directory
  default-language:    Haskell2010
  ghc-options: -O2 -Wall -Werror
    -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat
    -Wredundant-constraints -Wnoncanonical-monad-instances
